add basic layout and color styles to HabitInfoModal

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,6 @@ html, body {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ECEBE1;
   }
 }
