--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 700px;
   margin: 0 auto;
   padding: 2rem;
   padding-bottom: 8rem;
@@ -17,7 +17,8 @@ button {
   align-items: center;
   gap: 8px;
 
-  background-color: #E2E0C9;
+  background-color: #ECEBE1;
+  box-shadow: 0px 8px 16px #A1A09930;
   color: #4C4B39;
   cursor: pointer;
   
